// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`computeSparkByPortfolio — snapshot coverage > matches snapshot for 'allSingleSnapshot' 1`] = `
{
  "11111111-1111-4111-8111-111111111111": [
    {
      "date": "2026-07-24",
      "value": 300.46,
    },
  ],
  "22222222-2222-4222-8222-222222222222": [
    {
      "date": "2026-07-24",
      "value": 1000,
    },
  ],
}
`;

exports[`computeSparkByPortfolio — snapshot coverage > matches snapshot for 'emptyDashboard' 1`] = `{}`;

exports[`computeSparkByPortfolio — snapshot coverage > matches snapshot for 'mixedDashboard' 1`] = `
{
  "11111111-1111-4111-8111-111111111111": [
    {
      "date": "2026-07-24",
      "value": 300.46,
    },
  ],
  "22222222-2222-4222-8222-222222222222": [
    {
      "date": "2026-07-20",
      "value": 1000,
    },
    {
      "date": "2026-07-21",
      "value": 1010,
    },
    {
      "date": "2026-07-22",
      "value": 990,
    },
    {
      "date": "2026-07-23",
      "value": 1025,
    },
    {
      "date": "2026-07-24",
      "value": 1040,
    },
  ],
  "33333333-3333-4333-8333-333333333333": [],
}
`;

exports[`computeSparkByPortfolio — snapshot coverage > matches snapshot for 'partialOverlap' 1`] = `
{
  "22222222-2222-4222-8222-222222222222": [
    {
      "date": "2026-07-20",
      "value": 1000,
    },
    {
      "date": "2026-07-21",
      "value": 1010,
    },
    {
      "date": "2026-07-22",
      "value": 990,
    },
    {
      "date": "2026-07-23",
      "value": 1025,
    },
    {
      "date": "2026-07-24",
      "value": 1040,
    },
  ],
  "44444444-4444-4444-8444-444444444444": [
    {
      "date": "2026-07-22",
      "value": 500,
    },
    {
      "date": "2026-07-23",
      "value": 620,
    },
    {
      "date": "2026-07-24",
      "value": 415,
    },
  ],
}
`;
